# wmctf-register

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  config.py  docker-compose.example.yml  docker-compose.yml  entrypoint.sh  main.py  pow.py  pyproject.toml  requirements.dev.txt  requirements.txt
app/: __init__.py  app.py  db.py  team.py  user.py
menu/: MainMenu.py  MenuBase.py  UserMenu.py  __init__.py
model/: Team.py  User.py  __init__.py
src/: app.py  config.py  db.py  mail.py  pow.py  region.py
utils/: __init__.py  check.py  region.py  validate.py
