[tool.poetry]
name = "wmctf-register"
version = "0.1.0"
description = ""
authors = ["Yoshino-s <yoshino.prog@gmail.com>"]
readme = "README.md"
packages = [{include = "wmctf_register"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.1.1"
inquirer = "^3.1.3"
lolcat = "^1.4"
pydantic-settings = "^2.0.2"
psycopg2-binary = "^2.9.6"
pyyaml = "^6.0.1"
email-validator = "^2.0.0.post2"
rich = "^13.5.0"
passlib = "^1.7.4"
pre-commit = "^3.3.3"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"


[tool.poetry.group.dev.dependencies]
ecdsa = "^0.18.0"
gmpy2 = "^2.1.5"
country-list = "^1.0.0"
autopep8 = "^2.0.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
